--- a/index.html
+++ b/index.html
@@ -1,1 +1,54 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.png"><title>Juri Welz - Master Student Computer Science - Software Developer - Machine Learning - Privacy</title><link href="/css/app.6b1adfcf.css" rel="preload" as="style"><link href="/js/app.05e1e571.js" rel="preload" as="script"><link href="/js/chunk-vendors.be68940a.js" rel="preload" as="script"><link href="/css/app.6b1adfcf.css" rel="stylesheet"></head><body><noscript><strong>You can always visit <a href="https://www.linkedin.com/in/juri-otto-orson-welz-753b4a138">my LinkedIn</a>. But for this website to work, you will need JavaScript enabled.</strong></noscript><div id="app"></div><script src="/js/chunk-vendors.be68940a.js"></script><script src="/js/app.05e1e571.js"></script></body></html>
+<!DOCTYPE html>
+
+<header>
+
+    <style type="text/css">
+        html,
+        body {
+            background-color: #EEEEEE;
+            margin: 40px auto 10px;
+            max-width: 650px;
+            line-height: 1.6;
+            font-size: 18px;
+            color: #444;
+            padding: 0 10px;
+            display: flex;
+            flex-direction: column;
+            height: calc(100% - 50px);
+            box-sizing: border-box;
+        }
+
+        main {
+            flex: 1
+        }
+
+        footer {
+            margin-top: auto;
+        }
+
+        h1,
+        h2,
+        h3 {
+            line-height: 1.2;
+        }
+    </style>
+
+</header>
+
+<body>
+
+    <main>
+        <h1>Juri Otto Orson Welz</h1>
+        <p>Full-Stack Software Engineer with a Master's in Computer Science and experience in developing
+            enterprise-grade, distributed solutions for high-impact industries. Proficient in data structures,
+            algorithms,
+            debugging, and diagnostics. Eager to learn and work hard, with a commitment to leveraging technology to
+            enhance
+            user experiences and make the world a better place.</p>
+        <p>Typescript, React.js, Next.js, Vue.js, HTML, CSS, Python, Java</p>
+        <p>Visit my <a href="https://www.linkedin.com/in/juri-welz/">LinkedIn profile</a></p>
+    </main>
+
+    <footer><a href="imprint.html">Imprint</a></footer>
+
+</body>
