a11y and best practices improvement

--- a/imprint.html
+++ b/imprint.html
@@ -1,11 +1,49 @@
 <!DOCTYPE html>
 
 <header>
+
+    <style type="text/css">
+        html,
+        body {
+            background-color: #EEEEEE;
+            margin: 40px auto 10px;
+            max-width: 650px;
+            line-height: 1.6;
+            font-size: 18px;
+            color: #444;
+            padding: 0 10px;
+            display: flex;
+            flex-direction: column;
+            height: calc(100% - 50px);
+            box-sizing: border-box;
+        }
+
+        main {
+            flex: 1
+        }
+
+        footer {
+            margin-top: auto;
+        }
+
+        h1,
+        h2,
+        h3 {
+            line-height: 1.2;
+        }
+    </style>
+
 </header>
 
 <body>
-    <h1>Imprint / Impressum</h1>
-    <p>Juri Welz <br />
-        Friedrichstr. 122 <br />
-        10117 Berlin</p>
+
+    <main>
+        <h1>Imprint / Impressum</h1>
+        <p>Juri Welz <br />
+            Friedrichstr. 122 <br />
+            10117 Berlin</p>
+    </main>
+
+    <footer><a href="/">Back</a></footer>
+
 </body>
