--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
+<html lang="en">
 
-<header>
-
+<head>
+    <title>Juri Welz - Software Engineer</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="description"
+        content="Full-Stack Software Engineer with a Master's in Computer Science and experience in developing enterprise-grade, distributed solutions for high-impact industries.">
     <style type="text/css">
         html,
         body {
@@ -33,7 +37,7 @@
         }
     </style>
 
-</header>
+</head>
 
 <body>
 
@@ -50,5 +54,6 @@
     </main>
 
     <footer><a href="imprint.html">Imprint</a></footer>
-
 </body>
+
+</html>
